# project-planner-agent-system

./: .gitignore  DEPLOYMENT.md  README.md  agents_.py  app.py  console_chat.py  demo.py  domain_obj.py  main.py  project_database.db  pyproject.toml  requirements.txt  run.py  run_api_server.py  run_dev.sh  run_prod.sh  test_config.py  test_system.py
.claude/: settings.local.json
api/: __init__.py  main.py
database/: __init__.py  database.py
debug/: test.py
deploy/: 502_ERROR_FIX_GUIDE.md  README.md  build_frontend.sh  fix_502_error.sh  nginx_config  notes.txt  redeploy_fixed.sh  restart_all.sh  run_backend_service.sh  run_nginx.sh
email_handler/: email_interface.py  email_service.py  microsoft_handler.py  smtp_handler.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  aws-exports.js  index.tsx
frontend/src/components/: ChatInterface.css  ChatInterface.tsx  DocumentViewer.css  DocumentViewer.tsx  DuoLogin.tsx  DuoSuccess.tsx  InvitationHandler.css  InvitationHandler.tsx  JoinForm.css  JoinForm.tsx  Login.css  ProjectLanding.css  ProjectLanding.tsx  ProjectRoom.css  ProjectRoom.tsx  index.ts
frontend/src/contexts/: ProjectContext.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts  enhancedApi.ts
frontend/src/types/: index.ts
naii_agents/: __init__.py  agents.py  tools.py
project_docs/: NAI_system_configuration.md  final-test_NAI_system_configuration.md
