[project]
name = "project-planner-naii"
version = "0.1.0"
description = "Agentic Project Planner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.2.8",
    "streamlit>=1.48.1",
    "python-dotenv",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.24",
    "pypdf2>=3.0.1",
    "itsdangerous>=2.2.0",
    "requests>=2.32.5",
    "responses>=0.25.8",
    "pytest>=8.4.2",
    "pyjwt>=2.10.1",
]

[tool.setuptools.packages.find]
include = ["naii_agents*"]
